Chrome拡張機能デモ版

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="content.js"></script>
 </head>
 <body>
-    
+    <textarea name="textarea" id="tweet_textarea" cols="30" rows="10"></textarea>
+    <p><span class="count">0</span>/140文字</p>
+    <button type="button" class="save">保存</button>
+    <button type="button" class="temp">テンプレート</button>
+    <button type="button" class="copy">コピー</button>
 </body>
 </html>
