Add:自動保存処理と復元処理の追加

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src="content.js"></script>
 </head>
 <body>
-    <textarea name="textarea" id="tweet_textarea" cols="30" rows="10"></textarea>
+    <textarea name="textarea" id="tweet_textarea" cols="30" rows="10" placeholder="メモはこちらに入力"></textarea>
     <p><span class="count">0</span>/280文字</p>
     <button type="button" class="save">保存</button>
     <button type="button" class="temp">テンプレート</button>
     <button type="button" class="copy">コピー</button>
+    <button type="button" class="restore">復元</button>
 </body>
 </html>
