Add: countup用ボタン追加（仮）

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="main">
     <div class='header'>
+      <p class="time">0分0秒</p>
       <div class="battery">
         <img src="img/battery_mark5.png" alt="バッテリー">
       </div>
@@ -46,6 +47,11 @@
           <button type="button" class="button-icon "><img src="img/sample.png" alt="sample"></button>
           <p class="button-name">button</p>
         </div>
+      </div>
+      <div>
+        <button type="button" id="start">スタート</button>
+        <button type="button" id="stop">ストップ</button>
+        <button type="button" id="reset">タイマーリセット</button>
       </div>
     </div>
   </div>
